--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,14 @@ dependencies:
   flutter_svg: ^2.0.9
   intl: ^0.19.0
   cupertino_icons: ^1.0.6
+  table_calendar: ^3.0.9
+  cached_network_image: ^3.3.0
+  uuid: ^4.3.0
+  webview_flutter: ^4.7.0
+  webview_flutter_android: ^4.10.11
+  webview_flutter_wkwebview: ^3.23.5
+  smooth_page_indicator: ^1.0.0
+  share_plus: ^7.2.1
 
 dev_dependencies:
   flutter_test:
@@ -24,5 +32,5 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/images/
-    - assets/icons/
+    - assets/banners/
+    - assets/events/
