--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  image_picker: ^1.0.7
   flutter_riverpod: ^2.4.9
   go_router: ^12.1.1
   google_fonts: ^6.1.0
@@ -24,6 +26,7 @@ dependencies:
   smooth_page_indicator: ^1.0.0
   share_plus: ^7.2.1
 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -32,6 +35,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
+    - assets/images/
     - assets/banners/
     - assets/events/
     - assets/images/
